# yoga-pose-detection

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  settings.py
.github/workflows/: cicd.yml
controllers/: capture.py  launcher.py  models.py
schemas/: keypoints.py
